--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
@@ -39,6 +39,7 @@
                 <tbody>
 
                 [% FOREACH importacion IN resultsloop %]
+                  [% TRY %]
                     <tr>
 
                           <td>
@@ -61,23 +62,25 @@
                           </td>
                           <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
                           <td>
-					      <div>
-						          [% PERL %]
-                                   print C4::AR::Filtros::action_set_button(
-									    title           => "[% 'Importaci&oacute;n' | i18n %]",
-                                        button          => 'btn btn-primary',
-                                        url				=>	"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
-                                        params 			=>   ["id_importacion=[% importacion.getId %]"],
-                                        actions         => [
-										    {title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
-                                            {title => "Configurar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/configurar_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
-                                            {title => "Borrar",action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove"},
-                                                           ],
-								    );
-                                  [% END %]
-					      </div>
+            					      <div>
+            						          [% PERL %]
+                                               print C4::AR::Filtros::action_set_button(
+            									    title           => "[% 'Importaci&oacute;n' | i18n %]",
+                                                    button          => 'btn btn-primary',
+                                                    url				=>	"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl",
+                                                    params 			=>   ["id_importacion=[% importacion.getId %]"],
+                                                    actions         => [
+            										    {title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
+                                                        {title => "Configurar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/configurar_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
+                                                        {title => "Borrar",action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove"},
+                                                                       ],
+            								    );
+                                              [% END %]
+            					      </div>
                           </td>
                     </tr>
+                  [% CATCH %]
+                  [% END %]
                 [% END %]
                 </tbody>
                 </table>
