--- a/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
@@ -1,15 +1,15 @@
 [% IF cantidad %]
    <div class="alert">
       <a class="close" data-dismiss="alert">×</a>
-      <strong>[% 'Atenci&oacute;n' | i18n %]</strong> [% 'Hay revisiones de ediciones para moderar' | i18n %].
+      <strong>[% 'Atenci&oacute;n' | i18n %]</strong> [% 'Hay revisiones de ediciones para moderar' | i18n %]&nbsp;
 
        [% PERL %]
                print C4::AR::Filtros::action_link_button(
-                                               button       => "btn btn-info",
+                                               button       => "btn btn-primary",
                                                url          => "[% url_prefix %]/admin/catalogo/revisiones_pendientes.pl",
                                                params       => ["token=[% token %]",],
                                                icon         => "icon-white icon-eye-open",
-                                               title        => " [% 'Moderar' | i18n %]",
+                                               title        => " [% 'Ver' | i18n %]",
                                            ) ;
         
        [% END %]
