--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -211,9 +211,10 @@
 		</div>
 	[% END %] <!-- End de If estadoColeccion  -->
 	
-
+	[% IF template_nivel1 != 'ANA' %]
          <h4><span class="badge badge-warning" style="cursor: default;">[% cantItemN1 %]</span>&nbsp;&nbsp;[% "Ejemplares" | i18n %]</h4>
          <br />
+  	[% END %]
 
 		</div>
 	</fieldset>
