add contenido estante

--- a/dev-plugins/bootstrapless/intranet/general.less
+++ b/dev-plugins/bootstrapless/intranet/general.less
@@ -20,6 +20,10 @@
     z-index: 1020;
 }
 .center-section-form{
-    width:50%;
+    width:42%;
     margin:0 auto;
+}
+
+#recaptcha_widget_div{
+    margin-left:78px;
 }
