--- a/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
@@ -1,4 +1,33 @@
 <script type="text/javascript">
+
+
+    
+$(document).ready(function(){
+    
+
+    // $('#tablaResult tr').each(
+
+    // );
+
+
+    $('#tablaResultCont tr').each(
+
+                function(){
+
+                  alert($('#this').children("a"));
+
+                 //  button_add_content
+                 //     $('#this').find('span').each(
+                 //            function(){
+                 //                   alert($('#this').find('input').val());
+                 //            }
+                 //     );
+                  }
+    );
+    
+});
+    
+
 function agregarCont(id2){
            $('#optionsCheckbox'+id2).replaceWith("<span id=optionsCheckbox"+id2+"><a class='btn btn-danger' href='#' onclick=borrarCont("+id2+","+ $('#input_contenido_id_estante').val()+","+$('#input_contenido_id_padre_estante').val()+"); id=optionsCheckbox"+id2+">"
               +"<i class='icon-remove icon-white'></i></a></span>");
@@ -32,7 +61,7 @@ function borrarCont(cont, estante, padre){
                   <div class="contenedor_paginador">[% paginador %]</div>  
                   [% PERL %]
                       print C4::AR::Filtros::tableHeader(   
-                                        id              => "tablaResult",
+                                        id              => "tablaResultCont",
                                         class           => "",
                                         selectAll_id    => "",
                                         columns         => ['[% "Titulo" | i18n %]','[% 'Autor' | i18n %]',
@@ -56,7 +85,7 @@ function borrarCont(cont, estante, padre){
                     <td>
                             [% nomCompleto %]
                     </td>    
-                    <td width="250px"> 
+                    <td class="button_add_content" width="250px"> 
                               <ul class="unstyled">
                              
                                   [% FOREACH grupos %]
@@ -75,6 +104,7 @@ function borrarCont(cont, estante, padre){
                                                                         ) ;
                                                         [% END %]
                                                     </span>
+                                                    <input type='hidden' value='[% id2 %]'>
                                                     <span class="help-inline">
                                                         [% IF edicion%]
                                                                    [% edicion %]
