--- a/intranet/htdocs/intranet-tmpl/novedades_intra_result.tmpl
+++ b/intranet/htdocs/intranet-tmpl/novedades_intra_result.tmpl
@@ -1,20 +1,25 @@
+[% USE HTML %]
 
 [% IF cantidad %]
+<br />
   <fieldset>
-      <legend>[% "Novedades:" | i18n %]</legend>
-      <dl>
+      <legend>[% "Novedades internas" | i18n %]</legend>
+      <br />
+
               [% FOREACH novedad IN novedades %]
-                  <dt>
-                        [% novedad.getTitulo %] ( [% novedad.getFechaLegible %] )
-                  </dt>
-                  <dd>
-                    [% novedad.getResumen %]
-                    <a href='#' onclick="showNovedad([% novedad.getId %]);">
-                        [% 'Leer m&aacute;s' | i18n %]
-                     </a>
-                  </dd>
+                  <blockquote>
+                    <p><a href='#' onclick="showNovedad([% novedad.getId %]);">[% HTML.escape(novedad.getTitulo) %] ([% novedad.getFechaLegible %])</a></p>
+                    <small>[% HTML.escape(novedad.getResumen) %]
+                        <cite title="">
+                              <a href='#' onclick="showNovedad([% novedad.getId %]);">
+                                          [% 'Leer m&aacute;s' | i18n %]
+                              </a>
+                        </cite>
+                    </small>
+                  </blockquote>
+
               [% END %]
-      </dl>
+
   </fieldset>
   
 <div id="mostrar_novedad" class="modal hide fade"></div>
