fix mensaje error reserva con prestamo vencido opac

--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -99,7 +99,7 @@
 						</div>
 			    [% END %]
 				<!-- <div id="content" class="login-form"> -->
-				 <section class="center-section-form">
+				 <section class="center-section-form" id="section_login">
 					<div class="page-header">
 					    <h1>MERAN <small>[% 'Ingresar a Intranet' | i18n %]</small></h1>
 					</div>	
