[CHAGELOG] Ahora los registros que no aparecen en las busquedas se pueden agregar manualmente al indice, y ademas se informa si no esta en el indice en el detalle

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -137,7 +137,7 @@
 			  [% PERL %]
 			          print C4::AR::Filtros::action_button( 
 			                                          button         => "btn btn-success",
-			                                          action       => "agregarAIndice([% id1 %])", 
+			                                          action       => "addRegistroAlindice([% id1 %])", 
 			                                          icon         => "icon-white icon-eye-open",
 			                                          title        => "[% 'Agregar al &iacute;ndice' | i18n %]",
 			                                      ) ;
