--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -15,19 +15,23 @@
     print C4::AR::Filtros::tabbedPane( titulo    => "[% 'Reportes de Cat&aacute;logo' | i18n %]",
                                  subtitulo => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
                                  content   => [ 
-                                                {id => 'registro', text => "[% 'Generaci&oacute;n de Etiquetas' | i18n %]"},
+                                                {id => 'labels', text => "[% 'Generaci&oacute;n de Etiquetas' | i18n %]"},
+                                                {id => 'unindexed', text => "[% 'Registros no indexados' | i18n %]"},
                                               ],
                                  content_id=> 'reportes_catalogo',
-                                 active_id => 'registro',
+                                 active_id => 'labels',
     
     );
 
 [% END %]
 
-         <div class="tab-pane fade in active" id="registro">
+         <div class="tab-pane fade in active" id="labels">
             [% INCLUDE 'partials/reportes/_reporte_gen_etiquetas.inc' %]
         </div>
-        <div class="tab-pane fade " id="labels">
+        <div class="tab-pane fade " id="unindexed">
+            [% INCLUDE 'partials/reportes/_registros_no_indexados.inc' %]
+        </div>
+        <div class="tab-pane fade " id="busquedas">
             [% INCLUDE 'partials/reportes/_reporte_busquedas.inc' %]
         </div>
        
