--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticas.tmpl
@@ -16,7 +16,7 @@
 		   	<div class="page-header">
         		<h1>[% titulo %] <small>[% tipo_documento %] - #[% id1 %]</small></h1>
             	<h2>[% autor %] </h2>	
-           	</div>    
+        </div>    
 	
 		<div id="detalle1" class="detalle1">
 		   
@@ -74,26 +74,34 @@
 </fieldset>
           <div id="analiticas[% id2 %]" >
                 <div>
-	                [% FOREACH analiticas_array %]
-          			<div class="alert fade in">
-  					</div>
-	                <dl>  
-	                    [% FOREACH nivel1_analitica %]
-                              <!-- <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp; [% dato %]&nbsp;</dt> -->
-                               	<dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
-								<dd>[% dato %]&nbsp;</dd>
-	                    [% END %] <!-- END FOREACH nivel1_analitica -->
-	                </dl>
-	                <dl>  
-	                    [% FOREACH nivel2_analitica_array %]
-		                    [% FOREACH nivel2_analitica %]
-	                              <!-- <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp; [% dato %]&nbsp;</dt> -->
-	                              	<dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
-									<dd>[% dato %]&nbsp;</dd>
-							[% END %]
-	                    [% END %] <!-- END FOREACH nivel1_analitica -->
-	                </dl>
-	                [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
+                [% FOREACH analiticas_array %]
+          			<div class="alert fade in"></div>
+                    <div class="page-header">
+                       [% PERL %]
+                               print C4::AR::Filtros::link_to( text   => "<h2>[% nivel1_analitica_titulo %]</h2>",
+                                                               url    => "[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                               params   => ["id1=[% nivel1_analitica_id1 %]"],
+                                                               title  => "[% 'link al registro padre' | i18n %]",
+                                                           ) ;
+                       [% END %]
+                        <h3>[% nivel1_analitica_autor %] </h3> 
+                    </div>  
+                    
+  	                <dl>  
+  	                    [% FOREACH nivel1_analitica %]
+                                 	<dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+  								                <dd>[% dato %]&nbsp;</dd>
+  	                    [% END %] <!-- END FOREACH nivel1_analitica -->
+  	                </dl>
+  	                <dl>  
+  	                    [% FOREACH nivel2_analitica_array %]
+  		                      [% FOREACH nivel2_analitica %]
+                              	  <dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+                                  <dd>[% dato %]&nbsp;</dd>
+  					                [% END %]
+  	                    [% END %] <!-- END FOREACH nivel1_analitica -->
+  	                </dl>
+                [% END %]  <!-- END FOREACH nivel1_analiticas_array -->      
 		      </div> <!--end <div id="analiticasDelGrupo -->
 	     </div>
 	</div>
