--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -462,10 +462,20 @@
                                     </div>
                               </div>
                           [% END %]
- 
-	                    [% IF nivel1_analiticas_cant %]
-                                  [% INCLUDE "estructura/analiticasDelGrupo.tmpl" %]
-                        [% END %]
+
+ 				[% IF show_analiticas > 0 %]
+			     	<div class="accordion-heading">
+
+                       [% PERL %]
+                               print C4::AR::Filtros::link_to( text 	=> "[% 'Anal&iacute;ticas' | i18n %] <span class='badge badge-warning' style='cursor: default;'>[% cant_analiticas %]</span>",
+                                                               url 		=> "[% url_prefix %]/catalogacion/estructura/analiticas.pl", 
+                                                               params 	=> ["id2=[% id2 %]"],
+                                                               title 	=> "[% 'Anal&iacute;ticas' | i18n %]",
+                                                               class 	=> "accordion-toggle"
+                                                           ) ;
+                       [% END %]
+	              	</div>
+              	[% END %]
 	
 	                [% INCLUDE  "partials/e-docs_grupo.inc" %]
 
