--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
@@ -15,6 +15,7 @@ $(document).ready(function() {
     toggle_ayuda_in_line();
     makeToggle('divTablaAgregarVisualizacion','trigger',null,true);
     makeToggle('divTablaVisualizacion','trigger',null,true);
+    agregar_quitar_nivel3();
 
 });
 
