--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
@@ -14,6 +14,7 @@ $(document).ready(function() {
     toggle_ayuda_in_line();
     makeToggle('divTablaAgregarVisualizacion','trigger',null,true);
     makeToggle('divTablaVisualizacion','trigger',null,true);
+    agregar_quitar_nivel3();
 
 });
 
